Fix 44 Pixels black border on iOS and Rye Lane video not playing on touch

--- a/css/style.css
+++ b/css/style.css
@@ -526,6 +526,7 @@ body {
     background: transparent;
     width: 100%;
     height: 100%;
+    mix-blend-mode: screen;
 }
 
 #bolt6-video {
